Wed Nov  8 20:03:51 1995  Theodore Y. Ts'o  <tytso@dcl>

	* krb5_encode_test.c (main): In case of an error in the encoding
		routines, exit.  Otherwise, calling the print routines
		will often lead to a coredump.

	* ktest.c (ktest_make_sample_etype_info): Set etype.length to -1
		to mean that the optional salt string is missing.  (This
		is change in the convention used by the ASN.1 encoder and
		decoder for this ASN.1 structure.) 

Tue Oct 31 21:30:28 1995  Theodore Y. Ts'o  <tytso@dcl>

	* krb5_decode_test.c (main): Add tests for
	        decode_krb5_enc_data and decode_krb5_pa_enc_ts.

	* krb5_encode_test.c (main): Add tests for
	        encode_krb5_enc_data and encode_krb5_pa_enc_ts.

	* ktest.c (ktest_make_sample_pa_enc_ts): New functions to
	        test {encode,decode}_krb5_pa_enc_ts().

	* ktest_equal.c (ktest_equal_krb5_pa_enc_ts): New functions to test
		{encode,decode}_krb5_pa_enc_ts().

Sun Oct 15 10:51:22 1995    <tytso@rsts-11.mit.edu>

	* ktest.c (ktest_make_sample_alt_method,
		ktest_make_sample_etype_info): Fixed signed/unsinged -Wall
		flame.

Fri Sep 29 14:23:47 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (clean): Remove trval on a make clean

Wed Sep 06 14:20:57 1995   Chris Provenzano (proven@mit.edu)

        * ktest.c, ktest_equal.c, ktest_equal.h : 
		s/keytype/enctype/g, s/KEYTYPE/ENCTYPE/g

Tue Sep 05 22:10:34 1995   Chris Provenzano (proven@mit.edu)

        * ktest.c, ktest.h, ktest_equal.c, ktest_equal.h : Remove krb5_enctype 
		references, and replace with krb5_keytype where appropriate

Tue Aug 29 14:20:52 EDT 1995	Paul Park	(pjpark@mit.edu)
	* krb5_decode_test.c - Fix string constant.
	* trval.c - Remove definitions of malloc and realloc.  They should come
		in from stdlib.h.

Mon Aug 28 16:35:22 1995    <tytso@rsts-11.mit.edu>

	* krb5_decode_test.c (main): Add tests for
	        decode_krb5_{etype_info,alt_method}.

	* krb5_encode_test.c (main): Add tests for
	        encode_krb5_{etype_info,alt_method}.
